[package]
name = "snidnsproxythingy"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["rappet <rappet@rappet.de>"]
description = "Automatic IPv4 -> IPv6 TLS proxy using SNI and DNS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
argh = "0.1.12"
tls-parser = "0.11.0"
tokio = { version = "1.36.0", features = ["io-util", "macros", "net", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
